refactor: swagger update
